# smolagents

./: .gitignore  hello.py  pyproject.toml  search.py  text-to-sql.py  tools-classifier.py
course/: dummy-agent.py
course/agent_01/: app.py
course/docs/: plan.md  spec.md
docs/: prompt_plan.md
magic_formula_digest/: .gitignore  README.md  main.py  pyproject.toml  run_daily.sh
magic_formula_digest/tests/: test_calculations.py
magic_formula_digest/tests/fixtures/: mock_news.json  mock_stocks.json
magic_formula_digest/utils/: config.py  db.py  email_sender.py  email_template.py  news_client.py  processor.py  stock_client.py
tutorial/: agentic-rag.py  hello.py  search.py  text-to-sql.py
